syntax = "proto3";

package auth.v1;

option go_package = "nordic-bank/pkg/pb/auth/v1";

import "google/protobuf/timestamp.proto";

service AuthService {
  // Verify JWT token and return user claims
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
  
  // Get user by ID (for other services)
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // Validate user permissions
  rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse);
  
  // Refresh access token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  UserClaims claims = 2;
}

message UserClaims {
  string user_id = 1;
  string username = 2;
  string email = 3;
  UserRole role = 4;
  string customer_id = 5;  // Empty if employee/admin
}

enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_CUSTOMER = 1;
  USER_ROLE_EMPLOYEE = 2;
  USER_ROLE_ADMIN = 3;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  UserRole role = 4;
  string status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp last_login_at = 7;
}

message CheckPermissionRequest {
  string user_id = 1;
  string resource = 2;
  string action = 3;
}

message CheckPermissionResponse {
  bool allowed = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
}
